@@ -1,3 +1,8 @@
+2012-12-17  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* EcAlarmDestination.m: Fix designated initializer behaviour.
+	* EcControl.m: Make SNMP master agent port and host configurable.
+
 2012-12-07  Richard Frith-Macdonald <rfm@gnu.org>
 
         * EcAlarmSinkSNMP.m:
